--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "00-practice-app",
   "version": "0.1.0",
+  "homepage": "https://Brendan838.github.io/REACT_Portfolio",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.2.3",
     "install": "^0.13.0",
     "npm": "^8.1.3",
     "react": "^17.0.2",
@@ -20,6 +22,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b portfolio-build7 -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
